--- a/css/addItems.css
+++ b/css/addItems.css
@@ -19,3 +19,66 @@ body{
     width: 100%;
     text-align: center;
 }
+
+.name,
+.code,
+.price,
+.picture{
+    font-family: monospace;
+    font-size: 16px;
+    font-weight: bold;;
+}
+
+.main_category_name,
+.main_category_code,
+.main_product_price{
+    width: 190px;
+    height: 30px;
+    background: white;
+    border-radius: 5px;
+    border: 1px solid black;
+    display:inline-block;
+}
+
+.category_name,
+.category_code,
+.product_price{
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: none;
+    outline: none;
+    padding-left: 5px;
+}
+
+.main_subcategory_name{
+    border: 1px solid black;
+    font-size: 20px;
+    padding-bottom: 4px;
+}
+
+.product_picture{
+    width: 220px;
+}
+
+.main_addItemBtn{
+    display: block;
+    position:absolute;
+    left:50%;
+    transform:translate(-50%);
+    width: 100px;
+    height: 32px;
+    background: rgb(86, 86, 245);
+    border-radius: 5px;
+    border: 1px solid black;
+    margin-top: 10px;
+}
+
+.addItemBtn{
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: none;
+    outline: none;
+    color: white;
+}
