--- a/css/style.css
+++ b/css/style.css
@@ -451,16 +451,18 @@ pre {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto; }
-  @media (min-width: 576px) {
+  margin-left: auto;}
+  @media (min-width: 500px) {
     .container {
-      max-width: 540px; } }
+      max-width: 620px;
+      min-width: 620px;
+      width: 620px;} }
   @media (min-width: 768px) {
     .container {
-      max-width: 720px; } }
+      max-width: 720px; }}
   @media (min-width: 992px) {
     .container {
-      max-width: 960px; } }
+      max-width: 960px; }}
   @media (min-width: 1200px) {
     .container {
       max-width: 1140px; } }
