--- a/css/addItems.css
+++ b/css/addItems.css
@@ -1,85 +1,107 @@
 body{
-    background-color: #d9dbda;
+    margin:0;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-.main_div{
-    position:absolute;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
-    width:350px;
-    height:500px;
-    padding-left: 25px;
-    padding-right: 25px;
-    background-color:white;
-    border-radius:15px;
+.outer_picture {
+  width: 400px;
 }
 
-.heading{
-    width: 100%;
-    text-align: center;
+.file-upload-wrapper {
+  position: relative;
+  width: 90%;
+  height: 60px;
 }
 
-.name,
-.code,
-.price,
-.picture{
-    font-family: monospace;
-    font-size: 16px;
-    font-weight: bold;;
+.file-upload-wrapper:after {
+  content: attr(data-text);
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  padding: 10px 15px;
+  display: block;
+  width: calc(100% - 40px);
+  pointer-events: none;
+  z-index: 20;
+  height: 40px;
+  line-height: 20px;
+  color: #999;
+  border-radius: 5px 10px 10px 5px;
+  font-weight: 300;
+  border: 1px solid #54C7C3;
 }
 
-.main_category_name,
-.main_category_code,
-.main_product_price{
-    width: 190px;
-    height: 30px;
-    background: white;
-    border-radius: 5px;
-    border: 1px solid black;
-    display:inline-block;
+.file-upload-wrapper:before {
+  content: 'Upload';
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  height: 40px;
+  background: #54C7C3;
+  color: #fff;
+  font-weight: 700;
+  z-index: 25;
+  font-size: 16px;
+  line-height: 40px;
+  padding: 0 15px;
+  text-transform: uppercase;
+  pointer-events: none;
+  border-radius: 0 5px 5px 0;
 }
 
-.category_name,
-.category_code,
-.product_price{
-    width: 100%;
-    height: 100%;
-    border: none;
-    background: none;
-    outline: none;
-    padding-left: 5px;
+.file-upload-wrapper:hover:before {
+  background: #55cfca;
 }
 
-.main_subcategory_name{
-    border: 1px solid black;
-    font-size: 20px;
-    padding-bottom: 4px;
+.file-upload-wrapper input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  cursor: pointer;
+  width: 100%;
+}
+/*# sourceMappingURL=addItems.css.map */
+
+#login .container #login-row #login-column #login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 400px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.4);
 }
 
-.product_picture{
-    width: 220px;
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 20px;
 }
 
-.main_addItemBtn{
-    display: block;
-    position:absolute;
-    left:50%;
-    transform:translate(-50%);
-    width: 100px;
-    height: 32px;
-    background: rgb(86, 86, 245);
-    border-radius: 5px;
-    border: 1px solid black;
-    margin-top: 10px;
+#login .container #login-row #login-column #login-box #login-form #register-link {
+  margin-top: -85px;
 }
 
-.addItemBtn{
-    width: 100%;
-    height: 100%;
-    border: none;
-    background: none;
-    outline: none;
-    color: white;
-    cursor: pointer;
+.outer_subcategory{
+  margin-bottom: 17px;
 }
+
+.send-button{
+  background: #ea4335;
+  width:100%;
+  font-weight: 600;
+  color:#fff;
+  padding: 8px 25px;
+  }
