--- a/css/index.css
+++ b/css/index.css
@@ -21,3 +21,89 @@ body {
     background: #007bff;
     color: white;
 }
+
+.btn_{
+    background: rgb(239, 239, 239);
+    border: none;
+    color: black;
+    width: 35px;
+    height: 35px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+}
+
+.btn_:hover{
+    background: DodgerBlue;
+    color: white;
+}
+
+/* file */
+.file-upload-wrapper {
+    position: relative;
+    width: 90%;
+    height: 60px;
+    min-width: 200px;
+    margin-bottom: -20px;
+  }
+  
+  .file-upload-wrapper:after {
+    content: attr(data-text);
+    font-size: 14px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fff;
+    padding: 9px 15px;
+    padding-right: 80px;
+    display: block;
+    width: calc(100% - 40px);
+    pointer-events: none;
+    z-index: 20;
+    height: 40px;
+    line-height: 20px;
+    color: #999;
+    border-radius: 5px 10px 10px 5px;
+    font-weight: 300;
+    border: 1px solid #54C7C3;
+  }
+  
+  .file-upload-wrapper:before {
+    content: 'Upload';
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    height: 40px;
+    background: #54C7C3;
+    color: #fff;
+    font-weight: 700;
+    z-index: 25;
+    font-size: 12px;
+    line-height: 40px;
+    padding: 0 15px;
+    text-transform: uppercase;
+    pointer-events: none;
+    border-radius: 0 5px 5px 0;
+  }
+  
+  .file-upload-wrapper:hover:before {
+    background: #55cfca;
+  }
+  
+  .file-upload-wrapper input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+  }
