--- a/css/addItems.css
+++ b/css/addItems.css
@@ -74,7 +74,7 @@ body{
 }
 /*# sourceMappingURL=addItems.css.map */
 
-#login .container #login-row #login-column #login-box {
+#addItems .container #addItems-row #addItems-column #addItems-box {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -86,11 +86,11 @@ body{
   box-shadow: 0px 2px 5px rgba(0,0,0,0.4);
 }
 
-#login .container #login-row #login-column #login-box #login-form {
+#addItems .container #addItems-row #addItems-column #addItems-box #addItems-form {
   padding: 20px;
 }
 
-#login .container #login-row #login-column #login-box #login-form #register-link {
+#addItems .container #addItems-row #addItems-column #addItems-box #addItems-form #register-link {
   margin-top: -85px;
 }
 
